--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="pitch.html" target="_blank">Pitch</a></li>
-          <li class="nav-item"><a class="nav-link" href="prototype.html" target="_blank">Prototype</a></li>
+          <li class="nav-item"><a class="nav-link" href="pitch.html">Pitch</a></li>
+          <li class="nav-item"><a class="nav-link" href="prototype.html">Prototype</a></li>
           <li class="nav-item">
             <a class="nav-link mode-toggle" onclick="toggleMode()">
               <i class="fas fa-adjust"></i> Mode
