--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <nav>
   <a href="index.html">Home</a>
   <a href="pitch.html">Pitch Deck</a>
-  <a href="#prototype.html">Prototype</a>
+  <a href="prototype.html">Prototype</a>
   <a href="video.mp4">Live Demo</a>
 </nav>
 
