--- a/prototype.html
+++ b/prototype.html
@@ -163,9 +163,9 @@
 
 <!-- Navigation -->
 <nav>
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="pitch.html">Pitch Deck</a>
-  <a href="#prototype.html">Prototype</a>
+  <a href="prototype.html">Prototype</a>
   <a href="video.mp4">Live Demo</a>
 </nav>
 
